--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1> hello </h1>
+<!-- Copyrights to Je Min Son -->
+
+<!DOCTYPE html>
+
+<html lang="en-US">
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<title> HEEMONG </title>
+</head>
+
+<body>
+	
+
+
+
+</body>
+
+
+
+
+
+</html>
