--- a/index.html
+++ b/index.html
@@ -7,13 +7,38 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title> HEEMONG </title>
+	<title> heeminson </title>
+	<!-- Personal implemented stylesheet -->
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css?version=1" />
 </head>
 
+
 <body>
+	<div id="frame">
+
+		<!-- header -->
+		<div id="header">	
+			<ul>
+				<li><a href="#WORK"> WORK </a></li>
+				<li><a href="#TEXT"> TEXT </a></li>
+				<li><a href="#ABOUT"> ABOUT </a></li>
+				<li><a href="#NEWS"> NEWS </a></li>
+				<li><a href="#CONTACT"> CONTACT </a></li>
+			</ul>
+		</div>	
+		<!-- //header -->
+		<div id="container">
+			
+		</div>
+		<!-- // container -->
+		<div id="footer">
+			<p> © 2018 All Rights Reserved. Copyright Hee Min Son </p>
+			<a href="https://www.linkedin.com/in/je-min-son/" class="fa fa-linkedin" style="font-size: 36px"></a>
+		</div>
+		<!-- // footer -->
 	
-
-
+	</div>
+	<!-- frame -->
 
 </body>
 
