--- a/index.html
+++ b/index.html
@@ -14,25 +14,30 @@
 
 
 <body>
-	<!-- header -->
-	<div id="header">	
-		<ul>
-			<li><a href="#WORK"> WORK </a></li>
-			<li><a href="#TEXT"> TEXT </a></li>
-			<li><a href="#ABOUT"> ABOUT </a></li>
-			<li><a href="#NEWS"> NEWS </a></li>
-			<li><a href="#CONTACT"> CONTACT </a></li>
-		</ul>
-	</div>	
-	<!-- //header -->
-	<div id="container">
-			
+	<div id="frame">
+		<!-- header -->
+		<div id="header">	
+			<ul>
+				<li><a href="#WORK"> WORK </a></li>
+				<li><a href="#TEXT"> TEXT </a></li>
+				<li><a href="#ABOUT"> ABOUT </a></li>
+				<li><a href="#NEWS"> NEWS </a></li>
+				<li><a href="#CONTACT"> CONTACT </a></li>
+			</ul>
+		</div>	
+		<!-- //header -->
+		<div id="container">
+			<div id="content">
+				<h1>content</h1>
+			</div>
+		</div>
+		<!-- // container -->
+		<div id="footer">
+			<p> © 2018 All Rights Reserved. Copyright Hee Min Son </p>
+		</div>
+		<!-- // footer -->
 	</div>
-	<!-- // container -->
-	<div id="footer">
-		<p> © 2018 All Rights Reserved. Copyright Hee Min Son </p>
-	</div>
-	<!-- // footer -->
+	<!--frame -->
 
 </body>
 
